netcfg (1.61) UNRELEASED; urgency=low

  [ Konstantinos Margaritis]
  * Added armhf in arch field. Closes: #605013.

 -- Konstantinos <markos@debian.org>  Tue, 08 Feb 2011 13:52:34 +0200

netcfg (1.60) unstable; urgency=low

  [ Matt Palmer ]
  * Increase the frequency of DHCP discover packets sent during DHCP
    configuration using udhcpc.  This should ameliorate some problems with
    DHCP configuration when a link is slow to become available.
    Thanks to Ferenc Wagner for the patch.
  * Clarify the requirements for hostnames.  Closes: #399071.
  * Modify ethtool-lite so that it distinguishes between "ethtool failed"
    and "ethtool says link is down".  This should reduce link up/link down
    confusion.  Closes: #496647.
  * Wait for up to 3 seconds (in 0.25s increments) looking for the link on
    an interface.  Add a progress bar to show the progress of this
    operation.  Closes: #414117.
  * Wait for link detection on static interface configuration.
    Closes: #606515.
  * Release DHCP lease at the completion of the install.  Closes: #610553.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Nepali (ne.po)
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Ivan Masár
  * Swedish (sv.po) by Daniel Nylander
  * Telugu (te.po) by Arjuna Rao Chavala
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Matt Palmer <mpalmer@debian.org>  Sun, 06 Feb 2011 12:59:07 +1100

netcfg (1.59) unstable; urgency=low

  [ Matt Palmer ]
  * Modify the DHCP configuration process to write out elements of
    resolv.conf that the user has entered manually, because the DHCP server
    didn't supply them.  Closes: #362029.
  * Add an ethtool-lite Makefile target, to assist people in building a
    standalone ethtool-lite for debugging purposes.  Closes: #608452.

  [ Updated translations ]
  * Northern Sami (se.po) by Børre Gaup
